--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -26,7 +26,10 @@ FROM nginx:alpine
 # Copy built files to nginx
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Copy nginx configuration
+# Copy nginx main configuration (with worker_processes limit)
+COPY nginx-main.conf /etc/nginx/nginx.conf
+
+# Copy nginx server configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copy entrypoint script
