--- a/nginx.conf
+++ b/nginx.conf
@@ -32,5 +32,12 @@ server {
         return 200 "healthy\n";
         add_header Content-Type text/plain;
     }
+
+    # Ignore missing index.css (Vite may reference it but it's not needed)
+    location = /index.css {
+        access_log off;
+        return 204;
+        add_header Content-Length 0;
+    }
 }
 
