--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -15,7 +15,9 @@ COPY . .
 
 # Build arguments for environment variables
 ARG VITE_API_URL
+ARG GEMINI_API_KEY
 ENV VITE_API_URL=$VITE_API_URL
+ENV GEMINI_API_KEY=$GEMINI_API_KEY
 
 # Build the application
 RUN npm run build
