--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,25 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
+    # Proxy para API backend (usando rede privada do Railway)
+    # O entrypoint.sh substituirá BACKEND_INTERNAL_URL_PLACEHOLDER pela URL real
+    location /api {
+        proxy_pass BACKEND_INTERNAL_URL_PLACEHOLDER;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        
+        # Timeouts
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+    }
+
     # SPA routing - all routes go to index.html
     location / {
         try_files $uri $uri/ /index.html;
