--- a/nginx.conf
+++ b/nginx.conf
@@ -17,21 +17,27 @@ server {
 
     # Proxy para API backend (usando rede privada do Railway)
     # O entrypoint.sh substituirá BACKEND_INTERNAL_URL_PLACEHOLDER pela URL real
+    # IMPORTANTE: A URL deve terminar com /api para que o nginx remova o prefixo /api
     location /api {
-        proxy_pass BACKEND_INTERNAL_URL_PLACEHOLDER;
+        proxy_pass BACKEND_INTERNAL_URL_PLACEHOLDER/api;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
+        # Usar o host do backend
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
         proxy_cache_bypass $http_upgrade;
         
         # Timeouts
-        proxy_connect_timeout 60s;
+        proxy_connect_timeout 10s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
+        
+        # Logs de erro para debug
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503;
     }
 
     # SPA routing - all routes go to index.html
