--- a/nginx.conf
+++ b/nginx.conf
@@ -17,19 +17,29 @@ server {
 
     # Proxy para API backend (usando rede privada do Railway)
     # O entrypoint.sh substituirá BACKEND_INTERNAL_URL_PLACEHOLDER pela URL real
-    # IMPORTANTE: A URL deve terminar com /api para que o nginx remova o prefixo /api
     location /api {
-        proxy_pass BACKEND_INTERNAL_URL_PLACEHOLDER/api;
+        # Passar o path completo incluindo /api para o backend
+        proxy_pass BACKEND_INTERNAL_URL_PLACEHOLDER;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        # Usar o host do backend
+        
+        # Headers importantes para o backend
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $host;
-        proxy_cache_bypass $http_upgrade;
+        
+        # Preservar todos os headers originais (incluindo Content-Type e Content-Length)
+        proxy_pass_request_headers on;
+        proxy_pass_request_body on;
+        
+        # Não bufferizar requisições (importante para POST/PUT com body JSON)
+        proxy_buffering off;
+        proxy_request_buffering off;
+        
+        # Garantir que o body seja lido completamente
+        client_body_buffer_size 128k;
+        client_max_body_size 10m;
         
         # Timeouts
         proxy_connect_timeout 10s;
