--- a/nginx.conf
+++ b/nginx.conf
@@ -41,10 +41,17 @@ server {
         client_body_buffer_size 128k;
         client_max_body_size 10m;
         
-        # Timeouts
-        proxy_connect_timeout 10s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        # Timeouts (aumentados para evitar 504 Gateway Timeout)
+        # O backend pode demorar muito em operações como criação de tabelas, migrações, etc.
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
+        
+        # Manter conexão viva para melhor performance
+        proxy_set_header Connection "";
+        
+        # Não interromper conexão em caso de timeout do cliente
+        proxy_ignore_client_abort on;
         
         # Logs de erro para debug
         proxy_next_upstream error timeout invalid_header http_500 http_502 http_503;
