--- a/nginx.conf
+++ b/nginx.conf
@@ -62,8 +62,21 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # Service Worker e Manifest (não cachear para atualizações)
+    location ~* (sw\.js|workbox-.*\.js|manifest\.json)$ {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
+    }
+
     # Cache static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+    
+    # Ícones do PWA
+    location /icons/ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
