--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "@google/genai": "^1.33.0",
+    "lucide-react": "^0.560.0",
     "react": "^19.2.2",
     "react-dom": "^19.2.2",
-    "lucide-react": "^0.560.0",
     "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-pwa": "^0.21.2"
   }
 }
